--- a/crates/ndc-sendgrid/Cargo.toml
+++ b/crates/ndc-sendgrid/Cargo.toml
@@ -14,3 +14,4 @@ schemars = { version = "0.8", features = ["smol_str"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["preserve_order"] }
 tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.11.19" }
