--- a/crates/ndc-sendgrid/Cargo.toml
+++ b/crates/ndc-sendgrid/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", tag = "v0.1.0-rc.1" }
+ndc-client = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.4" }
+ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", rev = "e3f6ef5", package = "ndc-sdk" }
 
 async-trait = "0.1"
 prometheus = { version = "0.13" }
@@ -15,5 +16,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["preserve_order"] }
 tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.11.19" }
-indexmap = { version = "*" } # Use the version from ndc-sdk
+indexmap = "^1"
 thiserror = { version = "*" } # Use the version from ndc-sdk
