--- a/crates/ndc-sendgrid/Cargo.toml
+++ b/crates/ndc-sendgrid/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ndc-client = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.4" }
-ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", rev = "e3f6ef5", package = "ndc-sdk" }
+# ndc-client = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.4" }
+ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", rev = "abfc255", package = "ndc-sdk" }
 
 async-trait = "0.1"
 prometheus = { version = "0.13" }
