--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,6 +4,9 @@ name: Create and publish a Docker image
 
 # Configures this workflow to run every time a change is pushed to selected tags and branches
 on:
+  pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
@@ -61,3 +64,33 @@ jobs:
           name: connector-definition.tgz
           path: ./connector-definition/dist/connector-definition.tgz
           compression-level: 0 # Already compressed
+
+  release-connector:
+    name: Release connector
+    runs-on: ubuntu-latest
+    needs: build-and-push-image
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: connector-definition.tgz
+          path: ./connector-definition/dist/connector-definition.tgz
+      - name: Get version from tag
+        id: get-version
+        run: |
+          echo "tagged_version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+        shell: bash
+      - uses: mindsers/changelog-reader-action@v2
+        id: changelog-reader
+        with:
+          version: ${{ steps.get-version.outputs.tagged_version }}
+          path: ./CHANGELOG.md
+      - uses: softprops/action-gh-release@v1
+        with:
+          draft: false
+          tag_name: v${{ steps.get-version.outputs.tagged_version }}
+          body: ${{ steps.changelog-reader.outputs.changes }}
+          files: |
+            ./connector-definition/dist/connector-definition.tgz
+          fail_on_unmatched_files: true
